[package]
name = "plcvizu-gateway"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "*"
futures-channel = "0.3"
